testsuite/bsc.typechecker/kind/OneArgPlusOne.bs
package OneArgPlusOne () where

x :: Bit 1 2
x = _

